@@ -5,19 +5,19 @@ DIST gnote-0.7.4.tar.bz2 1787015 RMD160 b219beda055d50330e248c6109254af7541772dc
 DIST gnote-0.8.2.tar.xz 2322160 RMD160 22dce96c10408280817512633146fd0ce3983fa0 SHA1 b74728132d4a52ba5f1e33a8ef281f2d06ecc107 SHA256 7d42b16d6d6751c88f029aff78db7ed1560f2cb727e6cb3f3ef09711e2381992
 DIST gnote-0.8.3.tar.xz 2341228 RMD160 5f3035bc3f93e48b972e1036416788b83d4a85cf SHA1 a5244025633c031c106d30bb3902b2bb21fff5cf SHA256 41308f957b9cb6f885adb61a607b93ec969be069676e7d518c007ecf35f474ab
 EBUILD gnote-0.7.4.ebuild 1378 RMD160 c3864b712f8a631003318f49c267dfda67db88e7 SHA1 fd4316f302ca53d0604c027b8245218132a2ff6d SHA256 e33dca98453aa5a03d6aa0980075d15e5ac25dc74540dbb500a1991f70165c65
-EBUILD gnote-0.8.2-r10.ebuild 1155 RMD160 3b71085bbddbadaf24b6583d112618e11ca5b85d SHA1 b85343459a7aaf0063561a4df11a4c45e00fa1f7 SHA256 834275f0122ec4492a7b0d8cc44337da520ba7686677e0be6f692faad847234f
-EBUILD gnote-0.8.2.ebuild 1148 RMD160 0fa23d40b39af63f7495d17004fd3073ab9eb13d SHA1 c02f6080c65e06e794343173d05fa94d3c7402c4 SHA256 fc71e43dbe332c5971786816fe7eaa032e53ce9ae2b4ee69ee956f9550401a3c
-EBUILD gnote-0.8.3.ebuild 1196 RMD160 bd6b5042dd23b988ec6a85af365c939ed90218f8 SHA1 ba4e620c51a19d6e4cf94a7de053483cb37b176d SHA256 1c11bd76b3015ef0beb10239900e7e9ebc84004c352371710fa5ea5799ec6aff
-MISC ChangeLog 3376 RMD160 a35140a673d16b642c092c4978614bcbeb6019d5 SHA1 0a009bf9a996eae9e134a25e73e0048537a8cf3c SHA256 7be6aa417d6b512119f42c9ec23deb912fc81e72cb4b76a427164aa737d006bf
+EBUILD gnote-0.8.2-r10.ebuild 1233 RMD160 755e27be5cb9bce2986e0432d0dc47dfc8d94c26 SHA1 3f3d662e5765da68868db9ad40fe16ecbdb4a7df SHA256 5c29789eb23f8c80bf968bcc06c74149533d1b2a519e687181923bdce962f3f0
+EBUILD gnote-0.8.2.ebuild 1229 RMD160 ab81f866f36b795a9dac12dc5dd32d292b079a4b SHA1 a9d654a9b9e5cca9b553b6aa456ee98dd1617e85 SHA256 6b0d2e43a3e38b4741adf636ec9f416229159657bf6c90776bde5f6867768c90
+EBUILD gnote-0.8.3.ebuild 1277 RMD160 3470d8b16ebb0639cc38a8c18f1a51015f3478f1 SHA1 5fe0614f930821e87415a701b23dcc30f00bfa49 SHA256 bf1603eeada4b3e5dc9babd05302360531d35159b21b0c9e5afafb161b9abb43
+MISC ChangeLog 3589 RMD160 be1da2866885448c74ff8dafebb010e6cc9008a8 SHA1 7b43b89d05dbe5c407867a0b1fe10aaa269a6ac9 SHA256 8336780ed0387f9c2c3bdf46f9f6dcf697629b1730146db24b0288c365dbea35
 MISC metadata.xml 360 RMD160 cf909f1a4ac3af93e460b399f39aa8cb325b992e SHA1 5bf9ef61ef8587bdb9bc0365fdb6fd935ad3583a SHA256 bb3a0273a2bc0105a61ddbbe4dddb9189553625ff0c4ff946dd201a454b4a9b7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBAgAGBQJPqzLJAAoJEJ0WA1zPCt1h94gIAIumdSYccMFpRXbrqA6++rfj
-JkYpGp5OVKKA1GHXgEvjEWBsScyYx8xhNRiL1QBMQMmR3ck8hMbmxiyjb/6HjSbh
-wgybLFPAZsk+cqPdWQ0G1E+nq1FWPVnyK1hIJoNoIGjMuJqfHHhF5Yc4b1SitBeJ
-AdAU8jVMef7vtzZoxOlm5NRIKFCm3nFAxcYxQv7K7wsjeVTjOBrNrEURGPAfdIRG
-ehC6PCOAx/7DhRufHqMrk5vkRbFj/2vMCIV/FPbXPXhPjzcefiVYGwiBssDJ1tA4
-/PSCo5lUWZnI+jhB6H/kXFwUVOmrA/MIm4emHA6sA2HVsSnlGuBZCKW3C+HUI1s=
-=EYvN
+iQEcBAEBAgAGBQJPuVmoAAoJEJ0WA1zPCt1hMRQH/0rxWsor8XiYkMqsU279uGC5
+X2yAzpNRl+39ujit3/pMKht+WGX992ZDtVzThqBxZlggtfS+EzcploEiMyBxcKIY
+o1FEj4ECMvAof5Pi886JpnVLpNk7Jfj61mfbshsXfnpqLyVG4D8ttWN2E25YUb3S
+/QNx/UjMCvyWEc0Bvt1WKttmGHWDP8EcIh4fimqMvZ6tIGGow4c4Wub+4hlg25+G
+Qs5HHfZDMm+RjY+delsGdqpi2nBVXZHbebPfZ+pRkjFvQQx8foopGIW5CwCKf1sk
+thmkXIS0LQMiAEtNfij94Ut++J75AnSnjIFaHRRJNGvz8/J2S/Hp1C0EL8xL8nI=
+=+2iV
 -----END PGP SIGNATURE-----
