@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/gnote/gnote-0.8.2-r10.ebuild,v 1.1 2012/05/10 03:15:15 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/gnote/gnote-0.8.2-r10.ebuild,v 1.2 2012/05/20 20:52:50 tetromino Exp $
 
 EAPI="4"
 GNOME2_LA_PUNT="yes"
@@ -15,7 +15,7 @@ SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE="applet debug"
 
-RDEPEND=">=x11-libs/gtk+-3.0:3
+COMMON_DEPEND=">=x11-libs/gtk+-3.0:3
 	>=dev-cpp/glibmm-2.28:2
 	>=dev-cpp/gtkmm-3.0:3.0
 	>=dev-libs/libxml2-2:2
@@ -24,7 +24,9 @@ RDEPEND=">=x11-libs/gtk+-3.0:3
 	>=dev-libs/boost-1.34
 	>=sys-apps/util-linux-2.16
 	applet? ( >=gnome-base/gnome-panel-3 )"
-DEPEND="${DEPEND}
+RDEPEND="${COMMON_DEPEND}
+	gnome-base/gsettings-desktop-schemas"
+DEPEND="${COMMON_DEPEND}
 	virtual/pkgconfig
 	>=dev-util/intltool-0.35.0
 	app-text/gnome-doc-utils
