@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/gnote/gnote-0.8.3.ebuild,v 1.2 2012/05/03 19:41:32 jdhore Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/gnote/gnote-0.8.3.ebuild,v 1.3 2012/05/20 20:52:50 tetromino Exp $
 
 EAPI="4"
 GNOME2_LA_PUNT="yes"
@@ -16,7 +16,7 @@ KEYWORDS="~amd64 ~x86"
 IUSE="applet debug"
 
 # Automagic glib-2.32 dep
-RDEPEND=">=dev-libs/glib-2.32
+COMMON_DEPEND=">=dev-libs/glib-2.32
 	>=x11-libs/gtk+-3.0:3
 	>=dev-cpp/glibmm-2.28:2
 	>=dev-cpp/gtkmm-3.0:3.0
@@ -26,7 +26,9 @@ RDEPEND=">=dev-libs/glib-2.32
 	>=dev-libs/boost-1.34
 	>=sys-apps/util-linux-2.16
 	applet? ( >=gnome-base/gnome-panel-3 )"
-DEPEND="${DEPEND}
+RDEPEND="${COMMON_DEPEND}
+	gnome-base/gsettings-desktop-schemas"
+DEPEND="${COMMON_DEPEND}
 	virtual/pkgconfig
 	>=dev-util/intltool-0.35.0
 	app-text/gnome-doc-utils
