@@ -1,6 +1,11 @@
 # ChangeLog for app-misc/gnote
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/gnote/ChangeLog,v 1.17 2012/05/10 03:15:15 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/gnote/ChangeLog,v 1.18 2012/05/20 20:52:50 tetromino Exp $
+
+  20 May 2012; Alexandre Rostovtsev <tetromino@gentoo.org> gnote-0.8.2.ebuild,
+  gnote-0.8.2-r10.ebuild, gnote-0.8.3.ebuild:
+  Add missing gsettings-desktop-schemas dependency (bug #416793, thanks to
+  theodor).
 
 *gnote-0.8.2-r10 (10 May 2012)
 
